Add pfSense endpoints
